k8s/cart/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  namespace: mini

spec:
  selector:
    app: cart-service

  ports:
    - port: 5002
      targetPort: 5002
      protocol: TCP

  type: ClusterIP
